--- a/src/host/BSW/CMakeLists.txt
+++ b/src/host/BSW/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required (VERSION 2.8)   
 
+# set(CMAKE_VERBOSE_MAKEFILE ON)
 project(bsw)
 
-set(CMAKE_CXX_COMPILER "${XILINX_SDX}/bin/xcpp")
-
+set(CMAKE_CXX_COMPILER "g++")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O4 -g -DSDX_PLATFORM=xilinx_aws-vu9p-f1-04261818_dynamic_5_0 -D__USE_XOPEN2K8 -I${XILINX_SDX}/runtime/include/1_2/ -I${XILINX_VIVADO}/include/ -fmessage-length=0 -std=c++11")
+set(CMAKE_C_COMPILER "gcc")
+project(bsw)
 
 set (XILINX_LINK_LIBS libxilinxopencl.so)
 link_directories(${XILINX_SDX}/runtime/lib/x86_64 ${LD_LIBRARY_PATH})
